adding trigger on pull request for branches main and develop to github workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,6 +7,10 @@ on:
   push:
     branches: ['main']
 
+  pull_request:
+    branches: [ "main" ]
+    branches: [ "develop" ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
