--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,11 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: ['main']
-
+    branches: ['main', 'develop']
   pull_request:
-    branches: [ "main" ]
-    branches: [ "develop" ]
+    branches: ['main', 'develop']
 
 jobs:
   build:
@@ -27,5 +25,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-
-      - run: npm run deploy
+      - run: npm install
+      - run: npm run build
