--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,13 +19,17 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm install -g serve
-      - run: npm install
-      - run: npm run build
-      - run: serve build
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
