--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -53,3 +53,7 @@ jobs:
           user_email: 'github-actions[bot]@users.noreply.github.com'
           github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
           repository: ${{ github.repository }}
+        
+        - name: Helpers
+          run: |
+            ls
