--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
   "rules": {
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
-    "react/jsx-props-no-spreading": ["warn"],
+    "react/jsx-props-no-spreading": "off",
     "object-curly-spacing": "off",
     "max-len": ["error", 500],
     "no-shadow": "off"
