--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "gh-pages": "^4.0.0",
-    "prettier": "^2.7.1",
-    "husky": "^8.0.0"
+    "husky": "^8.0.3",
+    "prettier": "^2.7.1"
   }
 }
